crates/banshee_parser/src/snapshots/banshee_parser__tests__insert_multiple_rows.snap
---
source: crates/banshee_parser/src/lib.rs
expression: format_tree(sql)
---
SOURCE_FILE@0..60
  INSERT_STMT@0..60
    INSERT_KW@0..6 "INSERT"
    WHITESPACE@6..7 " "
    INTO_KW@7..11 "INTO"
    WHITESPACE@11..12 " "
    TABLE_REF@12..18
      IDENT@12..17 "users"
      WHITESPACE@17..18 " "
    INSERT_COLUMNS@18..29
      L_PAREN@18..19 "("
      IDENT@19..21 "id"
      COMMA@21..22 ","
      WHITESPACE@22..23 " "
      IDENT@23..27 "name"
      R_PAREN@27..28 ")"
      WHITESPACE@28..29 " "
    VALUES_CLAUSE@29..60
      VALUES_KW@29..35 "VALUES"
      WHITESPACE@35..36 " "
      VALUES_ROW@36..48
        L_PAREN@36..37 "("
        LITERAL@37..38
          INTEGER@37..38 "1"
        COMMA@38..39 ","
        WHITESPACE@39..40 " "
        LITERAL@40..47
          STRING@40..47 "'Alice'"
        R_PAREN@47..48 ")"
      COMMA@48..49 ","
      WHITESPACE@49..50 " "
      VALUES_ROW@50..60
        L_PAREN@50..51 "("
        LITERAL@51..52
          INTEGER@51..52 "2"
        COMMA@52..53 ","
        WHITESPACE@53..54 " "
        LITERAL@54..59
          STRING@54..59 "'Bob'"
        R_PAREN@59..60 ")"
